# IADATA700_mangetamain_fork

./: .flake8  .gitignore  README.md  download_data.py  index.html  instructions_documentation.ipynb  main.py  pyproject.toml  pytest.ini  run_app.py  run_tests.py  searchindex.js  stop_app.py
.doctrees/: ClassDiagram.doctree  README.doctree  environment.pickle  index.doctree
.doctrees/api/: modules.doctree  src.components.doctree  src.core.doctree  src.doctree
.github/workflows/: docs.yml  lint.yml  test-app.yml
_modules/src/: app.html  recipes_explorer.html
_modules/src/components/: ingredients_clustering_page.html  popularity_analysis_page.html
_modules/src/core/: data_loader.html  ingredients_analyzer.html  interactions_analyzer.html
_sources/: README.md.txt
api/: modules.html  src.components.html
docs/: CNAME  class-diagram.puml
docs/source/: ClassDiagram.rst  conf.py  index.rst
docs/source/api/: src.rst
notebooks/: exploration_lucas.ipynb
src/: __init__.py  app.py  data_explorer.py  data_loader.py  interactions_explorer.py  main.py  recipes_explorer.py
src/components/: __init__.py  ingredients_clustering_page.py  popularity_analysis_page.py  rating_analysis_page.py
src/core/: __init__.py  cache_manager.py  cacheable_mixin.py  data_explorer.py  data_loader.py  ingredients_analyzer.py  interactions_analyzer.py  logger.py
tests/: README.md  test_app.py  test_app_extended.py  test_cache_integration.py  test_cache_manager.py  test_cacheable_mixin.py  test_data_explorer.py  test_data_loader.py  test_ingredients_clustering_page.py  test_interactions_analyzer.py  test_logger.py  test_popularity_analysis_page.py
