[project]
name = "iadata700-mangetamain"
version = "0.1.0"
description = "Dans le cadre d'un enseignement à Telecom Paris, ce projet est une application web interactive sur une analyse de données d'une entreprise factice : Mangetamain ; leader dans la recommandation B2C de recettes de cuisine à l'ancienne bio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "coverage>=7.10.7",
    "flake8>=7.3.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sphinx>=8.2.3",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
]


