[project]
name = "iadata700-mangetamain"
version = "0.1.0"
description = "Dans le cadre d'un enseignement à Telecom Paris, ce projet est une application web interactive sur une analyse de données d'une entreprise factice : Mangetamain ; leader dans la recommandation B2C de recettes de cuisine à l'ancienne bio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=5.17.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "coverage>=7.10.7",
    "sphinx>=8.2.3",
    "pytest-cov>=7.0.0",
    "autoflake>=2.3.1",
    "autopep8>=2.3.2",
    "isort>=6.0.1",
]

[tool.black]
line-length = 125
target-version = ['py311']

[tool.autopep8]
max_line_length = 125
ignore = ["E203", "W503"]
aggressive = 2


